# congestion-coverage-plan

./: .gitignore  OccupancyMapCreator.py  OccupancyMapDefinitions.py  README.md  calculate_statistics.py  main.py  pyproject.toml  test_hamiltonian_path.py  times.py
data/occupancy_maps_madama3_doors_16_experiments/: occupancy_map_madama3_doors_16_experiments_2_levels.yaml  occupancy_map_madama3_doors_16_experiments_4_levels.yaml  occupancy_map_madama3_doors_16_experiments_5_levels.yaml  occupancy_map_madama3_doors_16_experiments_6_levels.yaml  occupancy_map_madama3_doors_16_experiments_7_levels.yaml  occupancy_map_madama3_doors_16_experiments_8_levels.yaml
docker/: Dockerfile  build-docker.sh  run-docker.sh
results/occupancy_map_atc_corridor_11/: occupancy_map_atc_corridor_11-lrtdp-_ptb_3000_stb_250_ctr_0-1_wtt_3_heu_mst2_expl_0_.csv  occupancy_map_atc_corridor_11-lrtdp-_ptb_3000_stb_250_ctr_0-1_wtt_5_heu_mst2_expl_0_.csv  occupancy_map_atc_corridor_11-lrtdp-_ptb_3_stb_250_ctr_0-1_wtt_5_heu_mst2_expl_0_.csv  occupancy_map_atc_corridor_11-tsp_pwm-_ptb_3000_stb_250_ctr_0-1_wtt_3_heu_mst2_expl_0_.csv
results/occupancy_map_atc_corridor_16/: occupancy_map_atc_corridor_16-lrtdp-_ptb_3000_stb_250_ctr_0-1_wtt_3_heu_mst2_expl_0_.csv  occupancy_map_atc_corridor_16-lrtdp-_ptb_3000_stb_250_ctr_0-1_wtt_5_heu_mst2_expl_0_.csv  occupancy_map_atc_corridor_16-lrtdp-_ptb_3_stb_250_ctr_0-1_wtt_3_heu_mst2_expl_0_.csv  occupancy_map_atc_corridor_16-lrtdp-_ptb_3_stb_250_ctr_0-1_wtt_5_heu_mst2_expl_0_.csv  occupancy_map_atc_corridor_16-tsp_pwm-_ptb_3000_stb_250_ctr_0-1_wtt_3_heu_mst2_expl_0_.csv
results/occupancy_map_atc_corridor_21/: occupancy_map_atc_corridor_21-lrtdp-_ptb_3000_stb_250_ctr_0-1_wtt_3_heu_mst2_expl_0_.csv  occupancy_map_atc_corridor_21-lrtdp-_ptb_3000_stb_250_ctr_0-1_wtt_5_heu_mst2_expl_0_.csv  occupancy_map_atc_corridor_21-lrtdp-_ptb_3_stb_250_ctr_0-1_wtt_3_heu_mst2_expl_0_.csv  (+2 more)
(+50 files in other folders)
