[build-system]
requires = ["setuptools<80",  "pip>=25.0"]
build-backend = "setuptools.build_meta"

[project]
name = "congestion_coverage_plan"
version = "0.0.1"
description = "An MDP planning framework for congestion-aware robot navigation using occupancy maps and LRTDP-TVMA algorithm."
readme = "README.md"
authors = [
    {name = "Stefano Bernagozzi", email = "stefano.bernagozzi@iit.it"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
]
keywords = []
dependencies = [
    "pyyaml>=6.0.3",
    "matplotlib>=3.10.0",
    "scipy>=1.15.3",
    "numpy>=2.2.6"/home/user1/UC3/src/components/planner_component/venv-congestion-coverage-plan,
    "tqdm>=4.67.1",
    "shapely>=2.1.2",
    "pandas>=1.5.3",
    "protobuf>=5.26.1,<6.0",
    "python-tsp>=0.3.1", 
    "numpydoc>=0.9.0",
    "ortools>=9.12",
    "scikit-fmm>=2019.1.30",
]
requires-python = ">=3.10"

# Comment these lines out, since they prevent the package from being found in code
[tool.setuptools.packages.find]
where = ["src"]
include = ["congestion_coverage_plan", "congestion_coverage_plan/*", "congestion_coverage_plan.*"]
#
[tool.setuptools.package-dir]
"" = "src"
# "congestion_coverage_plan" = "src/congestion_coverage_plan"



[tool.pylint.main]
disable = [
    "C0114",  # Missing module docstring
    "E0401",  # Unable to import
    "R0401",  # Cyclic import
    "W0511",  # TODO comments (we need them)
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.codespell]
ignore-words-list = 'assertIn'

[project.urls]
Homepage = "https://github.com/convince-project/congestion_coverage_plan"
Issues = "https://github.com/convince-project/congestion_coverage_plan/issues"